Updates to install and readme
Updated README to clear up some points and fix some spelling/grammar
errors.
Updated install.php to include some basic instructions and form input.
- form processing on the way.

--- a/appfiles/.htaccess
+++ b/appfiles/.htaccess
@@ -339,6 +339,10 @@ ServerSignature Off
   Deny from All
 </Files>
 
+<Files config.json>
+  Order Allow,Deny
+  Deny from All
+</Files>
 
 
 # ##############################################################################
