--- a/appfiles/.htaccess
+++ b/appfiles/.htaccess
@@ -80,8 +80,8 @@ Options -MultiViews
 # You can customize what Apache returns to the client in case of an error (see
 # http://httpd.apache.org/docs/current/mod/core.html#errordocument), e.g.:
 
-ErrorDocument 404 /index.php?url=404
-ErrorDocument 500 /index.php?url=500
+# ErrorDocument 404 /index.php?url=404
+# ErrorDocument 500 /index.php?url=500
 
 
 
@@ -213,9 +213,9 @@ AddDefaultCharset utf-8
   RewriteCond %{SCRIPT_FILENAME} !-d
   RewriteCond %{SCRIPT_FILENAME} !-f
 
-  RewriteRule ^articles/$ /index.php?url=article
-  RewriteRule ^articles/(.*)$ /index.php?url=article&article=$1
-  RewriteRule ^search/(.*)$ /index.php?url=search&query=$1
+  RewriteRule ^/articles/$ /index.php?url=article
+  RewriteRule ^/articles/(.*)$ /index.php?url=article&article=$1
+  RewriteRule ^/search/(.*)$ /index.php?url=search&query=$1
 
 </IfModule>
 
