--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@ dragonspiritmedia/
 
 composer.lock
 
-works.md
-app/plugins/works/*
 
 testing-awesome.md
 
 *---DRAFT.md
+*.TODO
+
+pages/images
+app/plugins/about
+app/plugins/works
+works.md
