--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,16 @@
 {
-  "require": {
-    "brainsware/php-markdown-extra-extended": "dev-master"
-  , "mustache/mustache": "dev-dev"
-  , "modularr/yaml-front-matter": "dev-master"
-  , "filp/whoops": "dev-master"
+  "name":                               "giggleboxstudios/throwdown"
+, "type":                               "software"
+, "description":                        "Throwdown: flat-file CMS with a predisposition for violence."
+, "keywords":                           ["PHP, CMS, Throwdown"]
+, "license":                            "MIT"
+
+, "require": {
+    "php": ">=5.3.0"
+  , "michelf/php-markdown":             "1.3.*@dev"
+  , "mustache/mustache":                "dev-dev"
+  , "modularr/yaml-front-matter":       "dev-master"
+  , "filp/whoops":                      "dev-master"
   }
+
 }
