re-attempting to remove client assets...
...

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ testing-awesome.md
 *---DRAFT.md
 *.TODO
 
-content/images/about/
+content/images/aboutd/
 app/plugins/about/
 app/plugins/works/
 works.md
