Optimized the system further
* `funcs.template.php` - Refactored a good bit of the
`funcs.template.php` file
* `funcs.template.php` - Cleaned out unnecessary functions
* `funcs.template.php` - Uniformed the documentation format of all
function docblocks
* `funcs.template.php` - Closes #14, `page_404()` now issues a
`header('Location:/404')` definition
* `funcs.template.php` - Closes #12, added `queue_header_scripts()`
function to register header scripts
* `funcs.template.php` - Closes #13, added `queue_footer_scripts()`
function to register footer scripts

* `/content` - Moved all content related features and folders into the
`/content` directory
* `/content` - Now contains `/artciles`, `/images`, `/pages`, `/plugins`
and `/themes` directories
* `/content` - All custom content directories used by the system should
be loaded within this directory going forward

* `.htaccess` - Closes #8, added `.htaccess` directive to prevent HTTP
requests to `config.json` and `config.php` files

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ testing-awesome.md
 *---DRAFT.md
 *.TODO
 
-content/images/aboutd/
+content/images/*
+content/images/*/*.jpg
+content/images/*/*.png
+content/images/*/*.gif
+content/images/*/*.jpeg
 app/plugins/about/
 app/plugins/works/
 works.md
