--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,27 @@
 {
-  "name":                               "giggleboxstudios/throwdown"
-, "type":                               "software"
-, "description":                        "Throwdown: flat-file CMS with a predisposition for violence."
-, "keywords":                           ["PHP, CMS, Throwdown"]
-, "license":                            "MIT"
+  "version": "0.0.1",
 
-, "require": {
-    "php": ">=5.3.0"
-  , "michelf/php-markdown":             "1.3.*@dev"
-  , "mustache/mustache":                "dev-dev"
-  , "modularr/yaml-front-matter":       "dev-master"
-  , "filp/whoops":                      "dev-master"
+  "require": {
+    "php": ">= 5.4.0",
+    "dispatch/dispatch": ">= 2.6.2",
+    "dispatch/dispatch-extras": "dev-master",
+    "giggleboxstudios/dispatch-handlebars": "dev-master",
+    "xamin/handlebars.php": "dev-master",
+    "modularr/yaml-front-matter": "dev-master",
+    "michelf/php-markdown": ">=1.4.1"
+  },
+
+  "autoload": {
+    "files": [
+      "app/minify.json.php"
+    ],
+
+    "psr-4": {
+      "Throwdown\\": "app/throwdown"
+    }
+  },
+
+  "testing": {
+    "hello": "world :D"
   }
-
 }
