setting things up for unit testing at some point :P part 2

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "ilya/belt": "dev-master",
     "ilya/fuzzy": "dev-master",
     "mibe/feedwriter": "dev-master",
-    "simplepie/simplepie": "dev-master"
+    "simplepie/simplepie": "dev-master",
+    "atoum/atoum": "dev-master"
   },
 
   "autoload": {
