--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,19 @@
     }
   },
 
-  "testing": {
-    "hello": "world :D"
+
+  "scripts": {
+    "post-install-cmd": [
+      "wget https://phar.phpunit.de/phpunit.phar",
+      "chmod +x phpunit.phar",
+      "phpunit --version"
+    ],
+    "movePhpUnit": [
+      "sudo mv phpunit.phar /usr/local/bin/phpunit",
+      "phpunit --version"
+    ],
+    "test": [
+      "php phpunit.phar"
+    ]
   }
 }
