--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
             "url": "https://raw.github.com/gigglebox/Throwdown/master/LICENSE"
         }
     ],
-    "dependencies": {
-    },
+    "dependencies": {},
     "main": "serve.js",
     "repository": "https://github.com/bmcminn/throwdown",
     "license": "MIT",
     "devDependencies": {
+        "bluebird": "^3.5.1",
         "chalk": "^2.3.0",
+        "chokidar": "^2.0.0",
         "consolidate": "^0.15.0",
+        "express": "3.0.5",
+        "grunt": "^0.4.5",
         "highlightjs": "^9.10.0",
         "jvent": "^1.0.2",
         "markdown-it": "^8.4.0",
-        "nunjucks": "^3.0.1",
-        "shortbus": "^1.2.7",
-        "bluebird": "^3.5.1",
-        "chokidar": "^2.0.0",
-        "express": "3.0.5",
-        "grunt": "^0.4.5",
         "node-file-server": "^1.0.1",
-        "polka": "^0.2.3",
+        "nunjucks": "^3.0.1",
         "prettier": "^1.10.2",
-        "sqlite": "^2.9.1"
+        "shortbus": "^1.2.7",
+        "sqlite": "^2.9.1",
+        "walk": "^2.3.9"
     },
     "scripts": {
         "serve": "node serve.js",
-        "prettier": "node_modules/.bin/prettier ./.bin/**/*.js --write",
+        "prettier": "node_module./app/prettier ./app/**/*.js --write",
         "index": "node .bin/tasks/index-file-system.js"
     }
 }
