--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
         "consolidate": "^0.15.0",
         "csso": "^3.5.0",
         "express": "3.0.5",
+        "gray-matter": "^3.1.1",
         "grunt": "^0.4.5",
         "highlightjs": "^9.10.0",
         "jvent": "^1.0.2",
+        "lowdb": "^1.0.0",
         "markdown-it": "^8.4.0",
-        "stylus": "^0.54.5",
         "node-file-server": "^1.0.1",
         "nunjucks": "^3.0.1",
         "prettier": "^1.10.2",
         "sqlite": "^2.9.1",
+        "stylus": "^0.54.5",
         "walk": "^2.3.9"
     },
     "scripts": {
         "serve": "node app/serve.js",
         "prettier": "node_module./app/prettier ./app/**/*.js --write",
-        "index": "node ./app/tasks/index-file-system.js"
+        "index-content": "node ./app/tasks/index-file-system.js"
     }
 }
