--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "nunjucks": "^3.0.1",
         "prettier": "^1.10.2",
         "sqlite": "^2.9.1",
+        "strip-ansi": "^4.0.0",
         "stylus": "^0.54.5",
         "walk": "^2.3.9"
     },
