logging broken defaults merge

--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ author:
             This user is a test author for demonstration puproses only, and should probably be retired once you start making your own content!
 
 # `theme` the theme we should be using to render the site
-theme: './theme'
+theme: 'pants'
 
 # `include` | `exclude`:
 include: []
